dfir_rs/tests/compile-fail-stable/surface_port_naked_overwrite_knot_a_forwardref.rs
../compile-fail/surface_port_naked_overwrite_knot_a_forwardref.rs